static/styles/video.css
/* Reset default browser styles */
body,
h1,
h2,
h3,
p,
ul,
li {
  margin: 0;
  padding: 0;
  font-family: Arial, sans-serif;
}

nav {
  display: flex; /* Set the navigation to flex container */
  justify-content: flex-end; /* Align the items to the right */
}

nav ul {
  list-style-type: none;
  display: flex; /* Display the list items as flex items */
}

nav li {
  margin-right: 10px;
  display: flex; /* Display the list item as a flex item */
}

nav a {
  text-decoration: none;
  color: #ffffff;
  font-weight: bold;
  font-size: 18px;
  padding: 10px;
  border-radius: 3px;
  background-color: #2a4b71;
}

nav a:hover {
  background-color: #ffffff;
  color: #000000;
}

li::marker {
  color: #2a4b71;
}

body {
  background-color: #1f1f1f;
}

header {
  background-color: #2a4b71;
  padding: 15px;
  display: flex;
  justify-content: center;
  align-items: center;
}

#logo img {
  width: 48px; /* Increased logo size */
  height: 50%;
  margin-right: 10px;
}

#search-bar {
  display: flex;
  width: 100%;
  margin: 0 50px;
  flex-grow: 2;
}

#search-bar input[type="text"] {
  width: 200%;
  padding: 10px;
  background-color: #383838;
  border: none;
  border-radius: 3px;
  color: #ffffff;
  max-width: 800px; /* Increased width to 800px */
  margin: 0;
}

#logo img {
  height: 40px;
}

main {
  padding: 20px;
}

.content {
  display: flex;
  flex-wrap: wrap;
}

.video {
  flex: 2;
  margin-right: 20px;
  width: 1280px;
  height: calc(1280px * 9 / 16);
}

.video video {
  margin-bottom: 15px;
  width: 100%;
  height: 100%;
  object-fit: contain;
}

.details {
  margin-bottom: 15px;
}

.details h3 {
  font-size: 24px; /* Increased font size */
  font-weight: bold;
  margin-bottom: 10px; /* Increased margin-bottom */
  color: #ffffff;
}
.details h2 {
  font-size: 20px;
  font-weight: bold;
  margin-bottom: 10px;
  color: #ffffff;
}

.details p {
  color: #ffffff;
  margin-bottom: 5px;
  font-size: 18px;
}

.discover {
  flex: 1;
  margin-top: 10px;
}

.discover h2 {
  font-size: 24px;
  font-weight: bold;
  margin-bottom: 10px;
  color: #ffffff;
}

.video-grid .video {
  display: flex;
  width: 100%;
  height: 100%;
  gap: 10px;
  margin-bottom: 15px;
}

.video-grid .video img {
  width: 295px;
  object-fit: cover;
}

.video-grid .details {
  flex-grow: 1;
}

.video-grid .details h3 {
  font-size: 18px;
  margin-bottom: 5px;
  color: #ffffff;
}

.video-grid .details p {
  color: #888888;
  margin-bottom: 5px;
}

.description-content {
  max-height: 100px; /* Initial maximum height to show only a portion of the description */
  overflow: hidden;
  white-space: pre-line;
  transition: max-height 0.3s ease; /* Smooth transition when expanding or collapsing */
}

.collapsed {
  max-height: 0;
}

.toggle-button {
  background: none;
  border: none;
  cursor: pointer;
  color: #ffffff;
  text-decoration: underline;
}

#open-vlc-button {
  padding: 10px 20px;
  background-color: #2a4b71;
  color: white;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  margin-top: 10px;
}

#open-vlc-button:hover {
  background-color: #2a4b71;
}

@media (max-width: 768px) {
  header {
    flex-direction: column;
    align-items: flex-start;
  }

  nav ul li {
    display: inline-block;
    margin-right: 0; /* Remove margin-right */
    margin-bottom: 10px; /* Add margin-bottom for spacing */
  }

  nav ul li a {
    color: #ffffff;
    text-decoration: none;
    font-weight: bold;
    font-size: 16px; /* Decrease font-size for smaller screens */
    padding: 8px; /* Decrease padding for smaller screens */
    border-radius: 3px;
    background-color: #2a4b71;
    display: block; /* Make the link a block element */
    margin-bottom: 10px; /* Add margin-bottom for spacing */
  }

  #search-bar {
    display: flex;
    width: 100%;
    margin: 0 20px; /* Decreased margin to 20px */
    flex-grow: 2;
  }

  #search-bar input[type="text"] {
    width: 100%; /* Changed width to 100% */
    padding: 8px; /* Decreased padding to 8px */
    background-color: #383838;
    border: none;
    border-radius: 3px;
    color: #ffffff;
    max-width: 400px; /* Decreased max-width to 400px */
    margin: 0;
  }

  #logo {
    display: none;
  }

  .video {
    margin-right: 0;
    height: 100%;
    width: 80%;
    object-fit: cover;
  }

  #open-vlc-button {
    font-size: 14px;
  }

  .discover {
    margin-bottom: 20px;
  }

  .video-grid .video {
    flex-direction: column;
    align-items: center;
  }
  .video-grid .details h3 {
    font-size: 14px;
    margin-bottom: 5px;
    color: #ffffff;
  }

  .video-grid .details p {
    color: #888888;
    margin-bottom: 5px;
  }

  .video-grid .video img {
    width: 316px;
    object-fit: cover;
  }
}

